# cobweb-py

./: .gitignore  LICENSE  README.md  pyproject.toml
cobweb_py/: __init__.py  brokers.py  client.py  easy.py  execution.py  features.py  plots.py  scoring.py  sweep.py  utils.py
tests/: test_cobweb.py
