[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cobweb-py"
version = "0.3.0"
description = "Python SDK for the CobwebSim stock simulation and backtesting API. Compute 71 technical features, run backtests with realistic execution modeling, generate 27 plot types, and deploy strategies to Alpaca."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["trading", "backtesting", "finance", "stock", "simulation", "technical-analysis", "quantitative-finance", "alpaca", "paper-trading", "algo-trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
]

[project.optional-dependencies]
viz = [
    "plotly>=5.0",
]
yahoo = [
    "yfinance>=0.2",
]
alpaca = [
    "alpaca-trade-api>=3.0",
]
all = [
    "plotly>=5.0",
    "yfinance>=0.2",
    "alpaca-trade-api>=3.0",
]

[project.urls]
Homepage = "https://cobweb.market"
Documentation = "https://cobweb.market/docs.html"
Repository = "https://github.com/cobwebSim/cobweb-py"
Issues = "https://github.com/cobwebSim/cobweb-py/issues"
Examples = "https://github.com/cobwebSim/backtest_under_20"

[tool.setuptools.packages.find]
include = ["cobweb_py*"]
